--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,18 +1,19 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.apps.gabothekiller.senabluetooth.SecondActivity"
-    android:id="@+id/gabosLayout">
+    android:id="@+id/gabosLayout"
+    android:orientation="vertical">
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="200dip"
         android:id="@+id/graph"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+         />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +21,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/gabosText"
-        android:layout_marginTop="145dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/graph"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+</LinearLayout>
